--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://containers-us-west-34.railway.app:5889/railway
 server.port=9080
 spring.datasource.username=postgres
-spring.datasource.password=Nanajam02
+spring.datasource.password=9ZDqTjRjPpVKt1x9Qr0v
