--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:postgresql://containers-us-west-34.railway.app:5889/r
 server.port=9080
 spring.datasource.username=postgres
 spring.datasource.password=9ZDqTjRjPpVKt1x9Qr0v
+#App Properties
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
