--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=9ZDqTjRjPpVKt1x9Qr0v
 #App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 86400000
+app.firebase-configuration-file=push-notification-534aa-firebase-adminsdk-vgfw2-a5ceebe530.json
