--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,12 @@
 			<artifactId>firebase-admin</artifactId>
 			<version>9.1.0</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.20.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
